Converted to dark mode. Fixed arrows. Adjusted formatting in various places. Formatted a couple of recent posts.

--- a/_sass/tale/_code.scss
+++ b/_sass/tale/_code.scss
@@ -4,7 +4,7 @@ code {
 }
 
 code {
-  background-color: $grey-3;
+  background-color: $code-background;
   border-radius: 3px;
   color: $code-color;
   font-size: 85%;
@@ -17,13 +17,13 @@ pre {
 
 pre code {
   background-color: transparent;
-  color: inherit;
+  color: $code-color;
   font-size: 100%;
   padding: 0;
 }
 
 .highlight {
-  background-color: $grey-3;
+  background-color: $code-background;
   border-radius: 3px;
   line-height: 1.4;
   margin: 0 0 1rem;
@@ -35,7 +35,7 @@ pre code {
   }
 
   .lineno {
-    color: $default-tint;
+    color: $code-color;
     display: inline-block; // Ensures the null space also isn't selectable
     padding: 0 .75rem 0 .25rem;
     // Make sure numbers aren't selectable
